[package]
name = "escrow-factory"
version = "0.1.3"
edition = "2021"
authors = ["netpoe <gus@aufacicenta.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.4"
serde_json = "1.0"
chrono = "0.4.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true